# sarafun_folding_assembly

./: .travis.yml  .travis_rosinstall  CMakeLists.txt  README.md  example.bag.csv  package.xml  rviz_abb.rviz
action/: Estimate.action  FoldingAssembly.action  FoldingController.action
bags/: example.bag  real_run.bag  real_run.bag.csv  real_run2.bag  real_run2.bag.csv
config/: Folding.cfg  config_action_node.yaml  config_mux.yaml  logger.config
include/folding_assembly_controller/: adaptive_velocity_controller.hpp  contact_point_estimator.hpp  controller.hpp  ects.hpp  folding_action_node.hpp  folding_controller.hpp  kalman_filter.hpp  pose_controller.hpp
include/utils/: kdl_manager.hpp  manager_base.hpp  matrix_parser.hpp  wrench_manager.hpp
input/: config_action_node.yaml  config_controller.yaml  config_controller_certh.yaml  config_estimator.yaml  config_estimator_certh.yaml
launch/: controller.launch  controller_certh.launch
msg/: AdaptiveController.msg  AdaptiveFeedback.msg  PoseGoal.msg  VelocityGoal.msg  monitorMsg.msg
scripts/: dummy_joint_publisher.py  joint_command_mux.py  process_feedback.py
src/: adaptive_velocity_controller.cpp  contact_point_estimator.cpp  controller.cpp  controller_node.cpp  ects.cpp  estimator_node.cpp  folding_action_node.cpp  folding_controller.cpp  kalman_filter.cpp  node.cpp  pose_controller.cpp
src/utils/: kdl_manager.cpp  manager_base.cpp  matrix_parser.cpp  wrench_manager.cpp
