<?xml version="1.0"?>
<package format="2">
  <name>folding_assembly_controller</name>
  <version>0.1.0</version>
  <description>The folding_assembly_controller package</description>
  <maintainer email="diogoa@kth.se">diogo</maintainer>
  <license>KTH</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>abb_irb14000_support</depend>
  <depend>eigen_conversions</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>sarafun_msgs</depend>
  <depend>generic_control_toolbox</depend>
</package>
